# RoadToPro

./: .env  .gitignore  README.md  README2md  lgbm_iterated_model.pkl  main.py  pyproject.toml
api/: app.py  auth.py  db.py  deps.py  kafka_bridge.py
api/routers/: health.py  highlights.py  live.py  matches.py  results.py  sse.py  trainer.py
config/: agent_lol_highlights.yaml  logging.yaml  lolesports.yaml  pandascore.yaml
docker/: docker-compose.yml  prometheus.yml
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/server/: main.py
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: EventFeed.jsx  GoldDiffChart.jsx  KeyEventsImpact.jsx  LiveMatch.jsx  MomentumChart.jsx  ObjectivePanel.jsx  PlayerCard.jsx  UpcomingMatches.jsx  WinProb.jsx
scripts/: kafka_topics.ps1  kafka_topics.sh  live-esport-stat.py  pandas_ws.py  pandascore.py  riot_spectator.py  run_ingestion.ps1  run_ingestion.sh
sql/: 01_raw.sql  02_matches.sql  03_results.sql
src/Rag/: agents.py  app.py  orchestrator.py  rag_setup.py  tools.py
src/agents/: lol_highlights_agent.py
src/core/: bus.py  metrics.py  models.py  sinks.py  sinks_kafka.py  sinks_pg.py
src/ingestion/: backoff.py  lol_live_stream.py  lol_normalizers.py  lol_results_stream.py  lol_schedule_stream.py  lolesports_client.py  pandascore_client.py  rate_limiter.py
tests/: test_client.py  test_kafka.py  test_normalizers.py
